fix scrollbars

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,5 +2,6 @@ main {
   display: flex;
   flex-direction: column;
   height: 100vh;
-  width: 100%;
+  width: 100vw;
+  overflow: auto;
 }
